# merchant-directory

./: README.md
.claude/: settings.local.json
.zed/: settings.json
api/: .env.example  README.md  data.json  main.py  pyproject.toml  seed.py  server.py
api/app/: config.py  database.py  dependencies.py  security.py
api/app/models/: __init__.py  feedback.py  merchant.py  user.py  util.py  utils.py
api/app/routes/: auth.py  feedbacks.py  merchant_types.py  merchants.py  users.py  utils.py
api/data/: fts.py  limo.json  merchant_descriptions.csv
api/migrations/: README.md  add_descriptions.py  add_feedback_rating.py  add_photo_url.py.old  additional_photos.py  cleanup_vercel_blob.py  photos.py  recreate_photos_table.py  reseed_all_photos.py  seed.py  seed_blur_data.py  trgm.py  update_feedback_columns.py
web/: .env.example  .gitignore  README.md  biome.jsonc  global.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
web/.zed/: settings.json
web/messages/: en.json  id.json
web/src/: proxy.ts
web/src/app/: global-not-found.tsx  globals.css  layout.tsx  manifest.webmanifest  not-found.tsx  opengraph-image.alt.txt  page.tsx  robots.txt  sitemap.ts
web/src/components/: explore-button.tsx  feedback-form.tsx  filter-select.tsx  font-switch.tsx  font-toggle.tsx  hero-decoration.tsx  interactive-map.tsx  locale-select.tsx  logout-button.tsx  merchant-pagination.tsx  merchant-photos.tsx  mode-toggle.tsx  nav.tsx  review-description.tsx  search-input.tsx  share-button.tsx  site-nav.tsx  site-settings.tsx  theme-select.tsx  typography.tsx  (+4 more)
(+50 files in other folders)
