[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.119.1",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]
